<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email_text_label">Email</string>
    <string name="password_text_label">Password</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="welcome_text">Welcome</string>
    <string name="welcome_message">Add shoes for different activities and occasions for your
        footwear needs.</string>
    <string name="get_started_button_text">Get Started</string>
    <string name="continue_button_text">Continue</string>
    <string name="instructions_text">Instructions</string>
    <string name="instructions_msg"> 1. Click Add Button to add a new shoe.\n
        \n2. Fill in the shoe details on the text fields. \n\n3. Press Save Button to view shoe
        details.
    </string>
    <string name="fab_content_desc">See Shoe Details</string>
    <string name="shoe_name_text_label">Shoe Name</string>
    <string name="shoe_name_hint">Enter Shoe Name</string>
    <string name="company_name_text_label">Shoe Company</string>
    <string name="company_name_hint">Enter Company Name</string>
    <string name="shoe_size_text_label">Shoe Size</string>
    <string name="shoe_size_hint">Enter Shoe Size</string>
    <string name="shoe_description_text">Shoe Description</string>
    <string name="shoe_description_hint">Enter Shoe Description</string>
    <string name="save_button_text">Save</string>
    <string name="log_out_text">Log Off</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="name_text_label">Shoe Name:</string>
    <string name="company_name_label_text">Company:</string>
    <string name="shoe_size_label_text">Size:</string>
    <string name="shoe_desc_label_text">Description:</string>
    <string name="styled_shoe_name"> <![CDATA[<b>Name:</b>]]></string>
    <string name="styled_company_name"><![CDATA[<b>Company:</b>]]></string>
    <string name="styled_size"><![CDATA[<b>Size:</b>]]></string>
    <string name="styled_description"><![CDATA[<b>Description:</b>]]></string>
    <string name="add_shoe">Add Shoe</string>


</resources>
