<?xml version="1.0" encoding="utf-8"?>

<!--using layout and constraint layout to constrain views and support data binding-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.screens.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.login.LoginFragment">

        <TextView
            android:id="@+id/emailTextLabel"
            style="@style/my_textlabels_style"
            android:layout_marginTop="192dp"
            android:layout_marginEnd="278dp"
            android:text="@string/email_text_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_marginTop="12dp"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="@dimen/padding_drawable"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTextLabel"
            style="@style/my_edittexts_style" />

        <TextView
            android:id="@+id/passwordTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="278dp"
            android:paddingStart="@dimen/textlabel_padding"
            android:paddingEnd="@dimen/textlabel_padding"
            android:text="@string/password_text_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="75dp"
            android:drawableStart="@drawable/custom_password_icon"
            android:drawablePadding="@dimen/padding_drawable"
            style="@style/my_edittexts_style"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextLabel" />

        <Button
            android:id="@+id/signUpButton"
            style="@style/my_buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginBottom="64dp"
            android:onClick="@{()-> viewModel.onNavigateToWelcomeScreen()}"
            android:text="@string/sign_up_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/signInButton"
            style="@style/my_buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="75dp"
            android:onClick="@{() -> viewModel.onNavigateToWelcomeScreen()}"
            android:text="@string/sign_in_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/signUpButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>